@@ -1,3 +1,9 @@
+2006-07-16	Benedikt Meurer <benny@xfce.org>
+
+	* engines/balou/config.c, xfce4-session/xfsm-legacy.c: Apply patch
+	  from Nick Schermer <nick@xfce.org> to fix a bunch of compiler
+	  warnings.
+
 2006-07-10	Benedikt Meurer <benny@xfce.org>
 
 	* configure.in.in: Post-release version bump.
